<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/recipe"
        android:icon="@drawable/icons8_recipe_96"
        android:title="@string/toolbar_recipe"
        android:showAsAction="always" />
    <item
        android:id="@+id/dictionary"
        android:icon="@drawable/icons8_dictionary_96"
        android:title="@string/toolbar_Deezer"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_sunrise"
        android:icon="@drawable/icons8_sunrise_96"
        android:title="@string/toolbar_sunrise"
        android:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:title="Help"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
